public class Customer
{
    private int id;
    private Status status;

    private String name;

    public int getId()
    {
        return this.id;
    }

    public void addAccount(BankAccount account)
    {

    }

    public void removeAccount(BankAccount account)
    {

    }
    public void setStatus(Status status)
    {
    }
    public Status getStatus()
    {
        return status;
    }

    public void setName(String name)
    {
        this.name = name;
    }
    public String getName()
    {
        return name;
    }
}

